JumpScript/tests/baselines/reference/parserStrictMode12.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode12.jump(2,19): error TS1100: Invalid use of 'eval' in strict mode.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode12.jump (1 errors) ====
    "use strict";
    var v = { set foo(eval) { } }
                      ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.